Tooling: [API] Changed target in tsconfig to es6

--- a/tooling/api/tsconfig.json
+++ b/tooling/api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "allowJs": true,
+    "target": "es6",
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
