disable running with npm6 due to vite fail

--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ["14", "16"]
-        manager: ["6", "7"]
+        manager: ["7"]
         exclude:
           - node: "16"
             manager: "6"
