Tooling: [API] Changed target in tsconfig to es6 (#2362)
Co-authored-by: Lucas Nogueira <lucas@tauri.studio>

--- a/tooling/api/tsconfig.json
+++ b/tooling/api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "allowJs": true,
+    "target": "es2021",
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
