--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -107,7 +107,7 @@ updater = [ "minisign-verify", "base64" ]
 menu = [ "tauri-runtime/menu", "tauri-runtime-wry/menu" ]
 system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
 reqwest-client = [ "reqwest", "bytes" ]
-fs-all = [ ]
+fs-all = [ "fs-write-binary-file" ]
 fs-read-text-file = [ ]
 fs-read-binary-file = [ ]
 fs-write-file = [ ]
