--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -12,8 +12,8 @@ exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 readme = "README.md"
 
 [dependencies]
-#wry = { version = "0.11", default-features = false, features = [ "file-drop", "protocol" ] }
-wry = { git = "https://github.com/tauri-apps/wry", branch = "dev", default-features = false, features = [ "file-drop", "protocol" ] }
+wry = { version = "0.12", default-features = false, features = [ "file-drop", "protocol" ] }
+# wry = { git = "https://github.com/tauri-apps/wry", branch = "dev", default-features = false, features = [ "file-drop", "protocol" ] }
 tauri-runtime = { version = "0.1.4", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-beta.2", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
