chore(cli.rs): change author [skip ci]

--- a/tooling/cli.rs/src/cli.yml
+++ b/tooling/cli.rs/src/cli.yml
@@ -1,6 +1,6 @@
 name: cargo-tauri
 bin_name: cargo tauri
-author: Lucas Nogueira <lucas@tauri.studio>
+author: Tauri Programme within The Commons Conservancy.
 about: The Tauri command line interface.
 subcommands:
   - dev:
