--- a/tooling/api/tsconfig.json
+++ b/tooling/api/tsconfig.json
@@ -10,7 +10,8 @@
     },
     "declaration": true,
     "declarationDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "moduleResolution": "node"
   },
   "include": ["./src"]
 }
