fix(cli.js): usage with HTTPS_PROXY, closes #2237

--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -53,6 +53,7 @@
     "cross-env": "7.0.3",
     "cross-spawn": "7.0.3",
     "fs-extra": "10.0.0",
+    "global-agent": "3.0.0",
     "got": "11.8.2",
     "imagemin": "8.0.0",
     "imagemin-optipng": "8.0.0",
@@ -73,6 +74,7 @@
     "@babel/preset-typescript": "7.14.5",
     "@types/cross-spawn": "6.0.2",
     "@types/fs-extra": "9.0.12",
+    "@types/global-agent": "2.1.1",
     "@types/imagemin": "7.0.1",
     "@types/imagemin-optipng": "5.2.1",
     "@types/inquirer": "7.3.3",
