fix: keep original `productName` for .desktop `Name` field, closes #2295

--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -54,6 +54,9 @@ encode_unicode = "0.3"
 [target."cfg(target_os = \"linux\")".dependencies]
 heck = "0.3"
 
+[target."cfg(target_os = \"linux\")".build-dependencies]
+heck = "0.3"
+
 [build-dependencies]
 schemars = "0.8"
 serde = { version = "1.0", features = [ "derive" ] }
