--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -53,6 +53,9 @@ hex = "0.4"
 chrono = "0.4"
 dirs-next = "2.0"
 
+[target."cfg(target_os = \"linux\")".dependencies]
+heck = "0.3"
+
 [lib]
 name = "tauri_bundler"
 path = "src/lib.rs"
