--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -2,6 +2,7 @@
   "name": "@tauri-apps/cli",
   "version": "1.0.0-beta.6",
   "description": "Command line interface for building Tauri apps",
+  "type": "module",
   "bin": {
     "tauri": "./bin/tauri.js"
   },
@@ -17,10 +18,10 @@
   "scripts": {
     "build": "rimraf ./dist && webpack --progress",
     "build-release": "rimraf ./dist && cross-env NODE_ENV=production webpack",
-    "test": "jest --runInBand --no-cache --testPathIgnorePatterns=\"(build|dev)\"",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --no-cache --testPathIgnorePatterns=\"(build|dev)\"",
     "pretest": "yarn build",
     "prepublishOnly": "yarn build-release",
-    "test:local": "jest --runInBand",
+    "test:local": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
     "lint": "eslint --ext ts \"./src/**/*.ts\"",
     "lint-fix": "eslint --fix --ext ts \"./src/**/*.ts\"",
     "lint:lockfile": "lockfile-lint --path yarn.lock --type yarn --validate-https --allowed-hosts npm yarn",
@@ -43,7 +44,7 @@
     "access": "public"
   },
   "engines": {
-    "node": ">= 12.13.0",
+    "node": ">= 12.20.0",
     "npm": ">= 6.6.0",
     "yarn": ">= 1.19.1"
   },
@@ -72,6 +73,7 @@
     "@babel/core": "7.14.8",
     "@babel/preset-env": "7.14.8",
     "@babel/preset-typescript": "7.14.5",
+    "@jest/globals": "27.0.6",
     "@types/cross-spawn": "6.0.2",
     "@types/fs-extra": "9.0.12",
     "@types/global-agent": "2.1.1",
@@ -98,7 +100,6 @@
     "lockfile-lint": "4.6.2",
     "prettier": "2.3.2",
     "promise": "8.1.0",
-    "raw-loader": "4.0.2",
     "rimraf": "3.0.2",
     "toml-loader": "1.0.0",
     "ts-loader": "9.2.3",
