--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -69,7 +69,8 @@ os_pipe = { version = "0.9", optional = true }
 rfd = "0.4.2"
 raw-window-handle = { version = "0.3.3", optional = true }
 minisign-verify = { version = "0.1", optional = true }
-os_info = { version = "3.0.6", optional = true}
+os_info = { version = "3.0.6", optional = true }
+futures-lite = "1.12"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.14", features = [ "v3_20" ] }
@@ -86,6 +87,7 @@ serde = { version = "1.0", features = [ "derive" ] }
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 tokio-test = "0.4.2"
+tokio = { version = "1.9", features = [ "full" ] }
 mockito = "0.30"
 
 [features]
