--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -45,7 +45,7 @@ jobs:
         if: (github.event.inputs.platform || 'ubuntu') == 'ubuntu'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
+          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev
       - run: yarn
         working-directory: tooling/cli.js
       - run: yarn build
@@ -86,7 +86,7 @@ jobs:
   #       if: (github.event.inputs.platform || 'ubuntu') == 'ubuntu'
   #       run: |
   #         sudo apt-get update
-  #         sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
+  #         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev
   #     - run: yarn
   #       working-directory: tooling/create-tauri-app
   #     - run: yarn build
