--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -43,7 +43,7 @@ jobs:
       - name: install webkit2gtk
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
+          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev
 
       # Rust
       - name: generate rust docs
