--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -76,6 +76,9 @@ futures-lite = "1.12"
 gtk = { version = "0.14", features = [ "v3_20" ] }
 glib = "0.14"
 
+[target."cfg(target_os = \"macos\")".dependencies]
+embed_plist = "1.2"
+
 [build-dependencies]
 cfg_aliases = "0.1.1"
 
