--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -66,7 +66,7 @@ attohttpc = { version = "0.17", features = [ "json", "form" ] }
 open = { version = "2.0", optional = true }
 shared_child = { version = "0.3", optional = true }
 os_pipe = { version = "0.9", optional = true }
-rfd = "0.4.3"
+rfd = { version = "0.4.3", features = ["parent"] }
 raw-window-handle = { version = "0.3.3", optional = true }
 minisign-verify = { version = "0.1", optional = true }
 os_info = { version = "3.0.6", optional = true }
