fix(core): `raw-window-handle` dependency, closes #2460

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,12 @@ members = [
   "core/tauri-macros",
   "core/tauri-utils",
   "core/tauri-build",
-  "core/tauri-codegen",
-
-  # examples
+  "core/tauri-codegen"
+]
+exclude = [
+  # examples that can be compiled with the tauri CLI
   "examples/api/src-tauri",
-  "examples/commands/src-tauri",
-  "examples/helloworld/src-tauri",
-  "examples/multiwindow/src-tauri",
-  "examples/navigation/src-tauri",
-  "examples/splashscreen/src-tauri",
-  "examples/state/src-tauri",
-  "examples/sidecar/src-tauri",
-  "examples/resources/src-tauri",
-  # used to build updater artifacts
-  "examples/updater/src-tauri",
+  "examples/updater/src-tauri"
 ]
 
 # default to small, optimized workspace release binaries
