--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -67,7 +67,7 @@ open = { version = "2.0", optional = true }
 shared_child = { version = "0.3", optional = true }
 os_pipe = { version = "0.9", optional = true }
 rfd = { version = "0.4.3", features = [ "parent" ] }
-raw-window-handle = { version = "0.3.3", optional = true }
+raw-window-handle = "0.3.3"
 minisign-verify = { version = "0.1", optional = true }
 os_info = { version = "3.0.6", optional = true }
 futures-lite = "1.12"
@@ -129,10 +129,38 @@ shell-all = [ "shell-open", "shell-execute" ]
 shell-execute = [ "shared_child", "os_pipe" ]
 shell-open = [ "open" ]
 dialog-all = [ "dialog-open", "dialog-save" ]
-dialog-open = [ "raw-window-handle" ]
-dialog-save = [ "raw-window-handle" ]
+dialog-open = [ ]
+dialog-save = [ ]
 http-all = [ ]
 http-request = [ ]
 notification-all = [ "notify-rust" ]
 global-shortcut-all = [ ]
 os-all = [ "os_info" ]
+
+[[example]]
+name = "commands"
+path = "../../examples/commands/src-tauri/src/main.rs"
+
+[[example]]
+name = "helloworld"
+path = "../../examples/helloworld/src-tauri/src/main.rs"
+
+[[example]]
+name = "multiwindow"
+path = "../../examples/multiwindow/src-tauri/src/main.rs"
+
+[[example]]
+name = "navigation"
+path = "../../examples/navigation/src-tauri/src/main.rs"
+
+[[example]]
+name = "splashscreen"
+path = "../../examples/splashscreen/src-tauri/src/main.rs"
+
+[[example]]
+name = "state"
+path = "../../examples/state/src-tauri/src/main.rs"
+
+[[example]]
+name = "resources"
+path = "../../examples/resources/src-tauri/src/main.rs"
