--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -16,8 +16,8 @@
     "url": "https://opencollective.com/tauri"
   },
   "scripts": {
-    "build": "rimraf ./dist && webpack --progress",
-    "build-release": "rimraf ./dist && cross-env NODE_ENV=production webpack",
+    "build": "rimraf ./dist && rollup -c --silent",
+    "build-release": "rimraf ./dist && cross-env NODE_ENV=production rollup",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit --no-cache --testPathIgnorePatterns=\"(build|dev)\"",
     "pretest": "yarn build",
     "prepublishOnly": "yarn build-release",
@@ -74,6 +74,11 @@
     "@babel/preset-env": "7.15.0",
     "@babel/preset-typescript": "7.15.0",
     "@jest/globals": "27.0.6",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "20.0.0",
+    "@rollup/plugin-node-resolve": "13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "8.2.5",
     "@types/cross-spawn": "6.0.2",
     "@types/fs-extra": "9.0.12",
     "@types/global-agent": "2.1.1",
@@ -101,12 +106,10 @@
     "prettier": "2.3.2",
     "promise": "8.1.0",
     "rimraf": "3.0.2",
-    "toml-loader": "1.0.0",
-    "ts-loader": "9.2.5",
-    "typescript": "4.3.5",
-    "webpack": "5.50.0",
-    "webpack-cli": "4.7.2",
-    "webpack-node-externals": "3.0.0"
+    "rollup": "2.56.2",
+    "rollup-plugin-terser": "7.0.2",
+    "tslib": "2.3.1",
+    "typescript": "4.3.5"
   },
   "resolutions": {
     "**/trim-newlines": "4.0.2"
