--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "rimraf ./dist && rollup -c --silent",
-    "build-release": "rimraf ./dist && cross-env NODE_ENV=production rollup",
+    "build-release": "rimraf ./dist && cross-env NODE_ENV=production rollup -c",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit --no-cache --testPathIgnorePatterns=\"(build|dev)\"",
     "pretest": "yarn build",
     "prepublishOnly": "yarn build-release",
