--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -71,7 +71,6 @@ raw-window-handle = "0.3.3"
 minisign-verify = { version = "0.1", optional = true }
 os_info = { version = "3.0.6", optional = true }
 futures-lite = "1.12"
-http-range = "0.1.4"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.14", features = [ "v3_20" ] }
@@ -165,3 +164,7 @@ path = "../../examples/state/src-tauri/src/main.rs"
 [[example]]
 name = "resources"
 path = "../../examples/resources/src-tauri/src/main.rs"
+
+[[example]]
+name = "streaming"
+path = "../../examples/streaming/src-tauri/src/main.rs"
