--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -45,6 +45,7 @@ libc = "0.2"
 terminal_size = "0.1"
 unicode-width = "0.1"
 tempfile = "3"
+vfs = "0.5.1"
 zeroize = "1.4"
 
 [target."cfg(windows)".dependencies]
