refactor: custom protocol (#2503)
Co-authored-by: Lucas Nogueira <lucas@tauri.studio>

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -33,7 +33,7 @@ normal = [ "attohttpc" ]
 [dependencies]
 serde_json = { version = "1.0", features = [ "raw_value" ] }
 serde = { version = "1.0", features = [ "derive" ] }
-tokio = { version = "1.9", features = [ "rt", "rt-multi-thread", "sync", "fs" ] }
+tokio = { version = "1.9", features = [ "rt", "rt-multi-thread", "sync", "fs", "io-util" ] }
 futures = "0.3"
 uuid = { version = "0.8", features = [ "v4" ] }
 url = { version = "2.2" }
@@ -164,3 +164,7 @@ path = "../../examples/state/src-tauri/src/main.rs"
 [[example]]
 name = "resources"
 path = "../../examples/resources/src-tauri/src/main.rs"
+
+[[example]]
+name = "streaming"
+path = "../../examples/streaming/src-tauri/src/main.rs"
