fix CI: `cargo test --all-features` on core tests
Signed-off-by: David Lemarier <david@lemarier.ca>

--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: test
         run: |
-          cargo test
+          cargo test --all-features
 
   test-tauri-cli:
     runs-on: ${{ matrix.platform }}
