--- a/tooling/create-tauri-app/package.json
+++ b/tooling/create-tauri-app/package.json
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "chalk": "4.1.2",
-    "commander": "^8.1.0",
+    "commander": "8.1.0",
     "execa": "^5.0.0",
-    "inquirer": "^8.1.2",
+    "inquirer": "8.1.2",
     "scaffe": "1.1.0"
   },
   "devDependencies": {
@@ -44,7 +44,7 @@
     "@rollup/plugin-node-resolve": "13.0.4",
     "@rollup/plugin-typescript": "8.2.5",
     "@types/cross-spawn": "6.0.2",
-    "@types/inquirer": "^7.3.3",
+    "@types/inquirer": "7.3.3",
     "@types/semver": "7.3.8",
     "@typescript-eslint/eslint-plugin": "4.29.2",
     "@typescript-eslint/parser": "4.29.2",
