--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -66,9 +66,11 @@
     "rollup": "2.56.3",
     "rollup-plugin-terser": "7.0.2",
     "tslib": "2.3.1",
-    "type-fest": "2.2.0",
     "typedoc": "0.21.9",
     "typedoc-plugin-markdown": "3.10.4",
     "typescript": "4.4.2"
+  },
+  "dependencies": {
+    "type-fest": "2.3.4"
   }
 }
