--- a/core/tauri-build/Cargo.toml
+++ b/core/tauri-build/Cargo.toml
@@ -17,8 +17,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 anyhow = "1"
-proc-macro2 = "1"
-quote = "1"
+quote = { version = "1", optional = true }
 tauri-codegen = { version = "1.0.0-beta.4", path = "../tauri-codegen", optional = true }
 
 [target."cfg(windows)".dependencies]
@@ -27,4 +26,4 @@ serde_json = "1.0"
 tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils", features = [ "build" ] }
 
 [features]
-codegen = [ "tauri-codegen" ]
+codegen = [ "tauri-codegen", "quote" ]
