--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -46,6 +46,7 @@ terminal_size = "0.1"
 unicode-width = "0.1"
 tempfile = "3"
 zeroize = "1.4"
+glob = "0.3"
 
 [target."cfg(windows)".dependencies]
 winapi = { version = "0.3", features = [ "winbase", "winuser", "consoleapi", "processenv", "wincon" ] }
