feat(cli): do not enforce `src-tauri` folder structure, closes #2643

--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -54,6 +54,7 @@
     "cross-env": "7.0.3",
     "cross-spawn": "7.0.3",
     "fs-extra": "10.0.0",
+    "glob": "7.2.0",
     "global-agent": "3.0.0",
     "got": "11.8.2",
     "imagemin": "8.0.1",
@@ -81,6 +82,7 @@
     "@rollup/plugin-typescript": "8.2.5",
     "@types/cross-spawn": "6.0.2",
     "@types/fs-extra": "9.0.13",
+    "@types/glob": "7.1.4",
     "@types/global-agent": "2.1.1",
     "@types/imagemin": "7.0.1",
     "@types/imagemin-optipng": "5.2.1",
