feat(tauri-runtime-wry): allow window creation on the main thread

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ codegen-units = 1
 lto = true
 incremental = false
 opt-level = "s"
+
+[patch.'https://github.com/tauri-apps/tao']
+tao = { path = "../tao" }
