--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -135,7 +135,7 @@ jobs:
         with:
           path: tooling/cli.rs/target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-cargo-cli-${{ hashFiles('tooling/cli.rs/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli.rs/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
             ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli.rs/Cargo.lock') }}
@@ -198,7 +198,7 @@ jobs:
         with:
           path: tooling/cli.rs/target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-nightly-cargo-cli-${{ hashFiles('tooling/cli.rs/Cargo.lock') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli.rs/Cargo.lock') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
             ${{ matrix.platform }}-stable-cargo-cli-${{ hashFiles('tooling/cli.rs/Cargo.lock') }}
@@ -209,7 +209,7 @@ jobs:
         with:
           path: tooling/cli.js/test/jest/fixtures/empty/src-tauri/target
           # Add date to the cache to keep it up to date
-          key: ubuntu-latest-stable-template-${{ hashFiles('tooling/cli.rs/templates/src-tauri/**') }}-${{ env.CURRENT_DATE }}
+          key: ${{ matrix.platform }}-stable-template-${{ hashFiles('tooling/cli.rs/templates/src-tauri/**') }}-${{ env.CURRENT_DATE }}
           # Restore from outdated cache for speed
           restore-keys: |
             ${{ matrix.platform }}-stable-template-${{ hashFiles('tooling/cli.rs/templates/src-tauri/**') }}
