fix: include typescript declarations in plugin template

--- a/tooling/cli.rs/templates/plugin/with-api/package.json
+++ b/tooling/cli.rs/templates/plugin/with-api/package.json
@@ -7,6 +7,7 @@
   "description": "",
   "browser": "webview-dist/index.js",
   "main": "webview-dist/index.js",
+  "types": "webview-dist/index.d.ts",
   "scripts": {
     "build": "rollup -c ./webview-src/rollup.config.js",
     "prepublishOnly": "yarn build",
