--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -64,6 +64,7 @@
     "is-png": "3.0.1",
     "minimist": "1.2.5",
     "ms": "2.1.3",
+    "png-to-ico": "2.1.2",
     "png2icons": "2.0.1",
     "read-chunk": "4.0.2",
     "semver": "7.3.5",
