--- a/.github/workflows/artifacts-updater.yml
+++ b/.github/workflows/artifacts-updater.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - dev
+      - next
   pull_request:
     paths:
       - '.github/workflows/artifacts-updater.yml'
