feat(cli.rs): add `tauri` and `author` options to the `init plugin` cmd

--- a/tooling/cli.rs/templates/plugin/with-api/package.json
+++ b/tooling/cli.rs/templates/plugin/with-api/package.json
@@ -1,9 +1,7 @@
 {
   "name": "tauri-plugin-{{ plugin_name }}-api",
   "version": "0.0.0",
-  "authors": [
-    "You"
-  ],
+  "author": "{{ author }}",
   "description": "",
   "browser": "webview-dist/index.js",
   "main": "webview-dist/index.js",
