--- a/tooling/cli.rs/src/cli.yml
+++ b/tooling/cli.rs/src/cli.yml
@@ -195,3 +195,12 @@ subcommands:
                     short: a
                     long: api
                     about: Initializes a Tauri plugin with TypeScript API.
+                - author:
+                    long: author
+                    about: Author name.
+                    takes_value: true
+                - tauri:
+                    short: t
+                    long: tauri
+                    about: Initializes a Tauri core plugin (internal usage).
+                    setting: Hidden
