--- a/.github/workflows/build-smoke-tests.yml
+++ b/.github/workflows/build-smoke-tests.yml
@@ -57,9 +57,10 @@ jobs:
           ref: ${{ github.event.inputs.ref }}
           path: example
       - name: setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14
+          cache: npm
       - name: install rust stable
         uses: actions-rs/toolchain@v1
         with:
