--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -22,10 +22,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: 14
           registry-url: "https://registry.npmjs.org"
+          cache: npm
       - name: cargo login
         run: cargo login ${{ secrets.crate_token }}
       - name: git config
@@ -125,7 +126,7 @@ jobs:
 
       - uses: iamsauravsharma/create-dotenv@v1.1.0
         with:
-          directory: './tauri-search-bot'
+          directory: "./tauri-search-bot"
         env:
           ENV_KEY_DISCORD_BOT_SECRET: ${{ secrets.DISCORD_BOT_SECRET }}
           ENV_KEY_PREFIX: \!
