--- a/tooling/create-tauri-app/src/templates/dominator/_Cargo.toml
+++ b/tooling/create-tauri-app/src/templates/dominator/_Cargo.toml
@@ -2,7 +2,8 @@
 name = "<%= name %>"
 version = "1.0.0"
 categories = ["wasm"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 description = ""
 
 [profile.release]
