--- a/tooling/webdriver/Cargo.toml
+++ b/tooling/webdriver/Cargo.toml
@@ -11,7 +11,8 @@ repository = "https://github.com/tauri-apps/tauri"
 description = "Webdriver server for Tauri applications"
 readme = "README.md"
 exclude = [ ".license_template", "/target" ]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [dependencies]
 anyhow = "1"
