--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -7,7 +7,8 @@ license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Make tiny, secure apps for all desktop platforms with Tauri"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 exclude = [
   "/test",
   "/.scripts",
