--- a/examples/multiwindow/src-tauri/Cargo.toml
+++ b/examples/multiwindow/src-tauri/Cargo.toml
@@ -2,7 +2,8 @@
 name = "multiwindow"
 version = "0.1.0"
 description = "An example Tauri Multi-Window Application"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 
 [build-dependencies]
