--- a/examples/resources/src-tauri/Cargo.toml
+++ b/examples/resources/src-tauri/Cargo.toml
@@ -2,7 +2,8 @@
 name = "resources"
 version = "0.1.0"
 description = "A Tauri application that uses Node.js with app resources"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [build-dependencies]
 tauri-build = { path = "../../../core/tauri-build", features = [ "codegen" ] }
