--- a/examples/state/src-tauri/Cargo.toml
+++ b/examples/state/src-tauri/Cargo.toml
@@ -2,7 +2,8 @@
 name = "state"
 version = "0.1.0"
 description = "A simple Tauri Appplication showcase the state functionality"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [build-dependencies]
 tauri-build = { path = "../../../core/tauri-build", features = [ "codegen" ] }
