--- a/examples/updater/src-tauri/Cargo.toml
+++ b/examples/updater/src-tauri/Cargo.toml
@@ -2,7 +2,8 @@
 name = "updater-example"
 version = "0.1.0"
 description = "A very simple Tauri Appplication"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 
 [build-dependencies]
