--- a/tooling/bench/Cargo.toml
+++ b/tooling/bench/Cargo.toml
@@ -4,7 +4,8 @@ workspace = {}
 name = "tauri_bench"
 version = "0.1.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 description = "Cross-platform WebView rendering library"
 repository = "https://github.com/tauri-apps/wry"
