--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -12,7 +12,8 @@ license = "Apache-2.0 OR MIT"
 keywords = [ "bundle", "cargo", "tauri" ]
 repository = "https://github.com/tauri-apps/tauri"
 description = "Wrap rust executables in OS-specific app bundles for Tauri"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 exclude = [
   ".license_template",
   "CHANGELOG.md",
