--- a/tooling/cli.js/test/jest/fixtures/app/src-tauri/Cargo.toml
+++ b/tooling/cli.js/test/jest/fixtures/app/src-tauri/Cargo.toml
@@ -7,7 +7,8 @@ description = "A Tauri App"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 license = ""
 repository = ""
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [package.metadata.bundle]
 identifier = "com.tauri.dev"
