--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -4,7 +4,8 @@ workspace = { }
 name = "tauri-cli"
 version = "1.0.0-beta.7"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
