--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -49,6 +49,7 @@ tempfile = "3"
 zeroize = "1.4"
 glob = "0.3"
 heck = "0.3"
+dialoguer = "0.9"
 
 [target."cfg(windows)".dependencies]
 winapi = { version = "0.3", features = [ "winbase", "winuser", "consoleapi", "processenv", "wincon" ] }
