--- a/tooling/cli.rs/templates/plugin/backend/.github/workflows/covector-version-or-publish.yml
+++ b/tooling/cli.rs/templates/plugin/backend/.github/workflows/covector-version-or-publish.yml
@@ -13,10 +13,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: 12
           registry-url: 'https://registry.npmjs.org'
+          cache: yarn
+          cache-dependency-path: tooling/*/yarn.lock
       - name: git config
         run: |
           git config --global user.name "${{ github.event.pusher.name }}"
