--- a/.github/workflows/build-smoke-tests.yml
+++ b/.github/workflows/build-smoke-tests.yml
@@ -57,10 +57,11 @@ jobs:
           ref: ${{ github.event.inputs.ref }}
           path: example
       - name: setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: install rust stable
+          cache: yarn
+          cache-dependency-path: tooling/*/yarn.lock
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
