feat(core): add `shell > sidecar` allowlist and `process` feature flag [TRI-037] (#18)

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -164,8 +164,10 @@ process-relaunch = []
 protocol-all = ["protocol-asset"]
 protocol-asset = []
 reqwest-client = ["reqwest", "bytes"]
-shell-all = ["shell-execute", "shell-open"]
-shell-execute = ["shared_child", "os_pipe"]
+command = ["shared_child", "os_pipe"]
+shell-all = ["shell-execute", "shell-sidecar", "shell-open"]
+shell-execute = ["command"]
+shell-sidecar = ["command"]
 shell-open = ["open"]
 system-tray = ["tauri-runtime/system-tray", "tauri-runtime-wry/system-tray"]
 updater = ["minisign-verify", "base64", "dialog-ask"]
