--- a/core/tauri-build/Cargo.toml
+++ b/core/tauri-build/Cargo.toml
@@ -22,7 +22,7 @@ quote = { version = "1", optional = true }
 tauri-codegen = { version = "1.0.0-beta.4", path = "../tauri-codegen", optional = true }
 serde_json = "1.0"
 tauri-utils = { version = "1.0.0-beta.0", path = "../tauri-utils", features = [ "build" ] }
-toml_edit = "0.5"
+cargo_toml = "0.10"
 
 [target."cfg(windows)".dependencies]
 winres = "0.1"
