feat(macOS): Add `AppHandle::hide()`

--- a/examples/helloworld/package.json
+++ b/examples/helloworld/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-world",
-  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "tauri": "node ../../tooling/cli.js/bin/tauri"
   }
