--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -14,7 +14,8 @@ readme = "README.md"
 
 [dependencies]
 #wry = { version = "0.12", default-features = false, features = [ "file-drop", "protocol" ] }
-wry = { git = "https://github.com/tauri-apps/wry", rev = "910cc1eb8ed08c66e9fb75df90e28635538d68ab", default-features = false, features = [ "file-drop", "protocol" ] }
+#wry = { git = "https://github.com/tauri-apps/wry", rev = "910cc1eb8ed08c66e9fb75df90e28635538d68ab", default-features = false, features = [ "file-drop", "protocol" ] }
+wry = { git = "https://github.com/wravery/wry", branch = "update-webview2", default-features = false, features = [ "file-drop", "protocol" ] }
 tauri-runtime = { version = "0.2.1", path = "../tauri-runtime" }
 tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
@@ -22,7 +23,13 @@ infer = "0.4"
 
 [target."cfg(windows)".dependencies]
 ico = "0.1"
-webview2-com = "0.4.0"
+webview2-com = "0.6.0"
+
+[target."cfg(windows)".dependencies.windows]
+version = "0.24.0"
+features = [
+  "Win32_Foundation",
+]
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 png = "0.16"
