--- a/core/tauri-runtime/Cargo.toml
+++ b/core/tauri-runtime/Cargo.toml
@@ -32,8 +32,11 @@ http = "0.2.4"
 http-range = "0.1.4"
 infer = "0.4"
 
-[target."cfg(windows)".dependencies]
-webview2-com-sys = "0.4.0"
+[target."cfg(windows)".dependencies.windows]
+version = "0.24.0"
+features = [
+  "Win32_Foundation",
+]
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.14", features = [ "v3_20" ] }
