--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -20,7 +20,7 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
-  build-tauri-core:
+  test-tauri-core:
     runs-on: ${{ matrix.platform }}
 
     strategy:
@@ -84,6 +84,8 @@ jobs:
       - name: test
         run: |
           cargo test
+          cargo test --features api-all
+          cargo test --all-features
 
   test-tauri-cli:
     runs-on: ${{ matrix.platform }}
