--- a/core/tauri-runtime/Cargo.toml
+++ b/core/tauri-runtime/Cargo.toml
@@ -32,8 +32,11 @@ http = "0.2.4"
 http-range = "0.1.4"
 infer = "0.4"
 
+[target."cfg(windows)".dependencies]
+webview2-com = "0.7.0"
+
 [target."cfg(windows)".dependencies.windows]
-version = "0.24.0"
+version = "0.25.0"
 features = [
   "Win32_Foundation",
 ]
