--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -50,6 +50,7 @@ zeroize = "1.4"
 glob = "0.3"
 heck = "0.3"
 dialoguer = "0.9"
+ctrlc = "3.2"
 
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
