feat(ci): fill CLI docs on `covector version`

--- a/tooling/cli.rs/src/cli.yml
+++ b/tooling/cli.rs/src/cli.yml
@@ -126,7 +126,7 @@ subcommands:
               requires: generate
               
   - info:
-      about: Shows information about Tauri dependencies
+      about: Shows information about Tauri dependencies and project configuration.
   - init:
       about: Initializes a Tauri project.
       args:
