feat(ci): fill CLI docs on `covector version` (#2886)

--- a/tooling/cli.rs/src/cli.yml
+++ b/tooling/cli.rs/src/cli.yml
@@ -125,7 +125,7 @@ subcommands:
               about: Overwrite private key even if it exists on the specified path
               requires: generate
   - info:
-      about: Shows information about Tauri dependencies
+      about: Shows information about Tauri dependencies and project configuration.
   - init:
       about: Initializes a Tauri project.
       args:
